@@ -1,9 +1,11 @@
 Revision history for Perl extension AnyEvent.
 
 TODO: preferences, retry-callback, memleaks
+TODO: check tls in handle for bugs
 3.51
 	- added (experimental) AnyEvent::DNS module.
         - added (experimental) AnyEvent::Socket module.
+        - added support for TLS/SSL in AnyEvent::Handle.
         - make condvar->end call ->send as documented.
         - make condvar constructor support the documented cb => argument.
         - support more of the POSIX forms instead of a pure dooted quad for
